--- a/Projects/HobbyHub/package.json
+++ b/Projects/HobbyHub/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.42.5",
     "mongodb": "^6.5.0",
     "preline": "^2.1.0",
     "react": "^18.2.0",
